# metatopia-game-engine

./: .gitignore  Cargo.toml  GAME_DEV_GUIDE.md  LICENSE  QUICK_START.md  README.md
examples/: basic_game.rs  basic_graphics.rs  fractal_explorer.rs  my_first_game.rs  pest_control_sim.rs  simple_demo.rs  vr_netflix_hyperbolic.rs
shaders/: basic.wgsl  fractal_explorer.wgsl  non_euclidean.wgsl  pest_control.wgsl  score_overlay.wgsl  template_game.wgsl  vr_theater.wgsl
src/: audio.rs  collision.rs  lib.rs  quickstart.rs
src/core/: mod.rs
src/ecs/: mod.rs
src/graphics/: camera.rs  mesh.rs  mod.rs  shader.rs  texture.rs
src/input/: mod.rs
src/manifold/: chart.rs  geodesic.rs  metric.rs  mod.rs  portal.rs
src/math/: mod.rs
src/resources/: mod.rs
src/scoring/: mod.rs
src/time/: mod.rs
src/window/: mod.rs
tests/: integration_tests.rs
